# python-delphi-lsp

./: .gitignore  .ignore  MANIFEST.in  README.md  opencode.json  pyproject.toml
delphi_lsp/: __init__.py  agent_cache.py  agent_cli.py  agent_context.py  agent_layers.py  agent_metrics.py  agent_protocol.py  agent_relations.py  agent_templates.py  agent_workspace.py  binary.py  consts.py  lark_builder.py  lark_tokens.py  lsp_server.py  metrics.py  parallel_outline.py  preprocessor.py  progress.py  project_discovery.py  project_indexer.py  semantic.py  source_reader.py
delphiast/: __init__.py  agent_cli.py  agent_context.py  agent_layers.py  agent_protocol.py  agent_templates.py  agent_workspace.py  comment_builder.py  consts.py  grammar.py  lark_builder.py  lark_tokens.py  lsp_server.py  nodes.py  parser.py  preprocessor.py  project_discovery.py  project_indexer.py  semantic.py  semantic_builder.py  source_reader.py  workspace.py  writer.py
scripts/: audit_delphi_language_features.py  benchmark_github_corpus.py  benchmark_parallel_cache.py  bootstrap_vllm_codebase_skill_test.py  bootstrap_vllm_opencode_test.ps1  bootstrap_vllm_opencode_test.py  bootstrap_vllm_opencode_test.sh  build_github_performance_corpus.py  check_ornith_cache.py  generate_progress_pdf.py  generate_release_evidence.py  prepare_ornith_cache.py  run_delphi_corpus_checks.py  run_opencode_lsp_probe.py  run_openrouter_github_e2e.py  start_ornith_vllm.sh  summarize_opencode_request_payloads.py
tests/: corpora.performance.lock.json  test_agent_cache.py  test_agent_codebase.py  test_agent_context.py  test_agent_metrics.py  test_agent_protocol.py  test_agent_relations.py  test_agent_worker.py  test_agent_workspace.py  (+25 more)
(+28 files in other folders)
